--- a/cloudformation/aws_env.yml
+++ b/cloudformation/aws_env.yml
@@ -99,9 +99,9 @@ Resources:
           #!/bin/bash
           sudo yum update -y
           sudo yum install -y nginx git aws-cli
-          TOKEN=$(aws ssm get-parameter --name "github_token" --with-decryption --query "Parameter.Value" --output text)
-          git clone https://quangthang10793:${TOKEN}@github.com/quangthang10793/hello-world-nginx ~/hello-world-nginx
-          cd hello-world-nginx
+          TOKEN=$(aws ssm get-parameter --name "ThangToken" --with-decryption --query "Parameter.Value" --output text)
+          git clone -b master https://quangthang10793:${TOKEN}@github.com/quangthang10793/devops ~/devops
+          cd devops
           git checkout master
           sudo cp ~/hello-world-nginx/src/index.html /usr/share/nginx/html/index.html
           sudo systemctl start nginx
