--- a/.github/workflows/deploy_on_aws.yml
+++ b/.github/workflows/deploy_on_aws.yml
@@ -1,7 +1,12 @@
 name: Deploy Nginx to EC2
 
 on:
-  workflow_dispatch: 
+  workflow_dispatch:
+    inputs:
+      name:
+        description: 'Name to greet'
+        required: true
+        default: 'Trigger'
   push:
     branches:
       - main
